--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,7 +11,7 @@ html
 
   body
     nav.navbar.navbar-expand-lg.navbar-light.fixed-top.border-bottom
-      a.navbar-brand Social Network
+      a.navbar-brand(href='/') Social Network
       button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarSupportedContent', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
         span.navbar-toggler-icon
 
