--- a/views/login.pug
+++ b/views/login.pug
@@ -13,9 +13,9 @@ html
       h1 Login
       form.mt-4(action='/login', method='post')
         .form-group
-          input#exampleInputEmail1.form-control(type='text', placeholder='Username', name='username')
+          input.form-control(type='text', placeholder='Username', name='username')
         .form-group
-          input#exampleInputPassword1.form-control(type='password', placeholder='Password', name='password')
+          input.form-control(type='password', placeholder='Password', name='password')
         button.btn.btn-primary.btn-lg(type='submit') Login
         a(href='register') Need an account? Sign up.
 
