--- a/views/home.pug
+++ b/views/home.pug
@@ -16,7 +16,7 @@ block content
 
     .container.float-left
       .h4.float-left New Post
-      form(action='/home/post', method='post', id='post-form')
+      form(action='/post/new', method='post', id='post-form')
         .form-group
           textarea.form-control(rows='5', name='postText')
           button.btn.btn-primary.mr-1.mt-1(type='button') Image
