--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,6 +8,7 @@ html
     script(src='/javascripts/jquery-3.4.1.min.js')
     script(src='/javascripts/bootstrap.min.js')
     script(src='/javascripts/social-network.js')
+    script(src='https://kit.fontawesome.com/852217884c.js' crossorigin='anonymous')
 
   body
     nav.navbar.navbar-expand-lg.navbar-light.fixed-top.border-bottom
