--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,3 +1,26 @@
+$white: #1d1f21;
+$gray-100: #212529;
+$gray-200: #343a40;
+$gray-300: #495057;
+$gray-400: #6c757d;
+$gray-500: #adb5bd;
+$gray-600: #c5c5c5;
+$gray-700: #dee2e6;
+$gray-800: #e9ecef;
+$gray-900: #f8f9fa;
+$black: #ffffff;
+
+$link-color: $gray-600;
+$body-color: $gray-600;
+$hr-border-color: $gray-300;
+$card-border-color: $gray-300;
+$yiq-contrasted-threshold: 0;
+
+$border-radius: 0.5rem;
+$card-height: 100px;
+
+@import 'node_modules/bootstrap/scss/bootstrap';
+
 body {
     display: flex;
     flex-direction: column;
@@ -10,7 +33,6 @@ body {
 
 .navbar {
     z-index: 1;
-    background: #ffffff;
 }
 
 .container {
@@ -18,7 +40,6 @@ body {
 }
 
 hr {
-    border-top: 1px solid #dee2e6!important;
     margin: 0px;
 }
 
@@ -32,8 +53,6 @@ hr {
 }
 
 .card-body {
-    border-left: 1px solid #dee2e6;
-    border-right: 1px solid #dee2e6;
     height: 100%;
     padding: 0;
 }
@@ -76,10 +95,7 @@ hr {
 .post {
     padding: 15px;
     margin-top: 0px;
-}
-
-.post a {
-    color: black;
+    min-height: 110px;
 }
 
 .post .avatar-sm {
