--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,15 +3,14 @@ html
 
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/css/styles.css')
     script(src='/javascripts/jquery-3.4.1.min.js')
     script(src='/javascripts/bootstrap.min.js')
     script(src='/javascripts/social-network.js')
     script(src='https://kit.fontawesome.com/852217884c.js' crossorigin='anonymous')
 
   body
-    nav.navbar.navbar-expand-lg.navbar-light.fixed-top.border-bottom
+    nav.navbar.navbar-expand-lg.navbar-light.bg-white.fixed-top.border-bottom
       a.navbar-brand(href='/') Social Network
       button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarSupportedContent', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
         span.navbar-toggler-icon
@@ -24,6 +23,6 @@ html
             a.nav-link(href=`/user/${myUsername}`) Profile
         form.form-inline.my-2.my-lg-0
           input.form-control.mr-sm-2(type='search' placeholder='Search' aria-label='Search')
-          button.btn.btn-outline-success.my-2.my-sm-0(type='submit') Go!
+          button.btn.btn-success.my-2.my-sm-0(type='submit') Go!
 
     block content
