--- a/views/register.pug
+++ b/views/register.pug
@@ -3,8 +3,7 @@ html
 
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/css/styles.css')
     script(src='/javascripts/jquery-3.4.1.min.js')
     script(src='/javascripts/bootstrap.min.js')
 
