--- a/views/user.pug
+++ b/views/user.pug
@@ -8,7 +8,7 @@ block content
   .container
     .avatar-lg#avatar-profile
       img(src=`/images/avatar/${avatar}.webp`)
-    .h2#profile-name @#{profile.username}
+    .h2#profile-name #{profile.username}
     //- Determine button type for user profile, settings/unfollow/follow
     if isMyUser
       button.btn.btn-primary#profile-settings-button(type='button') Settings
