--- a/views/home.pug
+++ b/views/home.pug
@@ -18,7 +18,8 @@ block content
       form(action='/post/new', method='post', id='post-form')
         .form-group
           textarea.form-control(rows='5', name='postText')
-          button.btn.btn-primary.mr-1.mt-1(type='button') Image
+          button.btn.btn-primary.mr-1.mt-1(type='button')
+            i.far.fa-image
           button.btn.btn-primary.mt-1(type='submit') Post
 
   #feed
