--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -111,23 +111,23 @@ hr {
     margin-bottom: 4px;
 }
 
-.postButtons {
+.post-buttons {
     width: 100%;
     margin-top: 4px;
     margin-bottom: 4px;
     font-size: 20px;
 }
 
-.postButtons td:first-child {
+.post-buttons td:first-child {
     margin-left: 100px;
 }
 
-.postButtons td {
+.post-buttons td {
     vertical-align: text-bottom;
     margin-right: 30px;
 }
 
-.postButtons td:last-child {
+.post-buttons td:last-child {
     font-size: 1rem;
     text-align: right;
 }
