--- a/views/posts.pug
+++ b/views/posts.pug
@@ -2,22 +2,26 @@ extends user
 
 block profileContent
 
-    .card-body.border-left.border-right
-      each item in profile.content
-        .post.container.border-bottom
-          a(href=`/user/${profile.username}`)
-            .avatar-sm
-              img(src=`/images/avatar/${avatar}.webp`)
-          .h6
-            a(href=`/user/${profile.username}`) #{profile.username}
-          p #{item.text}
-          table.post-buttons
-            tbody
-              tr
-                td.i.far.fa-comment.comment-button
-                if item.isLiked
-                  td.i.fas.fa-heart.liked.like-button(data-id=item.id data-action='unlike')
-                else
-                  td.i.far.fa-heart.like-button(data-id=item.id data-action='like')
-                td.i.fas.fa-arrow-right.repost-button
-                td #{item.timestamp}
+  .card-body.border-left.border-right
+    each item in profile.content
+
+      - var postAvatar = (item.avatar) ? item.avatar : 'default'
+
+      .post.container.border-bottom
+        a(href=`/user/${item.username}`)
+          .avatar-sm
+            img(src=`/images/avatar/${postAvatar}.webp`)
+        .h6
+          a(href=`/user/${item.username}`) #{item.username}
+        p #{item.text}
+
+        table.post-buttons
+          tbody
+            tr
+              td.i.far.fa-comment.comment-button
+              if item.isLiked
+                td.i.fas.fa-heart.liked.like-button(data-id=item.id data-action='unlike')
+              else
+                td.i.far.fa-heart.like-button(data-id=item.id data-action='like')
+              td.i.fas.fa-arrow-right.repost-button
+              td #{item.timestamp}
