--- a/views/posts.pug
+++ b/views/posts.pug
@@ -18,10 +18,10 @@ block profileContent
         table.post-buttons
           tbody
             tr
-              td.i.far.fa-comment.comment-button
+              td.i.far.fa-comment.comment-button(data-id=item.id)
               if item.isLiked
                 td.i.fas.fa-heart.liked.like-button(data-id=item.id data-action='unlike')
               else
                 td.i.far.fa-heart.like-button(data-id=item.id data-action='like')
-              td.i.fas.fa-arrow-right.repost-button
+              td.i.fas.fa-arrow-right.repost-button(data-id=item.id)
               td #{item.timestamp}
