--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -256,3 +256,18 @@ hr {
         display: none;
     }
 }
+
+/*========== Settings page ==========*/
+
+.settings-container {
+    margin: auto;
+    margin-top: 80px;
+    width: 40%;
+    min-width: 320px;
+    max-width: 400px;
+}
+
+.settings-container button {
+    width: 100%;
+    margin-bottom: 1rem;
+}
