--- a/views/settings.pug
+++ b/views/settings.pug
@@ -20,18 +20,19 @@ block content
       button.btn.btn-primary.btn-lg(type='submit') Update Email Address
 
     form.mt-4(action='/settings/update-profile', method='post')
-      h5 Profile Settings
+      h5 Change Avatar
       .form-group
-        label(for='profileAvatar') Profile Avatar
         input#profileAvatar.form-control-file(type='file')
+      button.btn.btn-primary.btn-lg(type='submit') Update Avatar
 
-        label(for='profileHeader').mt-3 Profile Header
+    form.mt-4(action='/settings/update-profile', method='post')
+      h5 Change Header
+      .form-group
         input#profileHeader.form-control-file(type='file')
+      button.btn.btn-primary.btn-lg(type='submit') Update Header
 
-        label(for='profileBio').mt-3 Profile Bio
-        textarea#profileBio.form-control(rows='3')
-
-        button.btn.btn-primary.btn-lg(type='submit').mt-3 Update Profile
-
-
-
+    form.mt-4(action='/settings/update-profile', method='post')
+      h5 Change Bio
+      .form-group
+        textarea#profileBio.form-control(rows='3', placeholder='Bio')
+      button.btn.btn-primary.btn-lg(type='submit') Update Bio
