--- a/views/settings.pug
+++ b/views/settings.pug
@@ -8,7 +8,7 @@ block content
     form.mt-4(action='/settings/update-password', method='post')
       h5 Change Password
       .form-group
-        input.form-control(type='password', placeholder='New Password', name='username')
+        input.form-control(type='password', placeholder='New Password', name='password')
       .form-group
         input.form-control(type='password', placeholder='Repeat New Password', name='passwordRepeat')
       button.btn.btn-primary.btn-lg(type='submit') Update Password
@@ -19,20 +19,20 @@ block content
         input.form-control(type='email', aria-describedby='emailHelp', placeholder='New Email Address', name='email')
       button.btn.btn-primary.btn-lg(type='submit') Update Email Address
 
-    form.mt-4(action='/settings/update-profile', method='post')
+    form.mt-4(action='/settings/update-avatar', method='post')
       h5 Change Avatar
       .form-group
         input#profileAvatar.form-control-file(type='file')
       button.btn.btn-primary.btn-lg(type='submit') Update Avatar
 
-    form.mt-4(action='/settings/update-profile', method='post')
+    form.mt-4(action='/settings/update-header', method='post')
       h5 Change Header
       .form-group
         input#profileHeader.form-control-file(type='file')
       button.btn.btn-primary.btn-lg(type='submit') Update Header
 
-    form.mt-4(action='/settings/update-profile', method='post')
+    form.mt-4(action='/settings/update-bio', method='post')
       h5 Change Bio
       .form-group
-        textarea#profileBio.form-control(rows='3', placeholder='Bio')
+        textarea#profileBio.form-control(rows='3', placeholder='Bio' name='bio')
       button.btn.btn-primary.btn-lg(type='submit') Update Bio
