--- a/views/settings.pug
+++ b/views/settings.pug
@@ -36,3 +36,6 @@ block content
       .form-group
         textarea#profileBio.form-control(rows='3', placeholder='Bio' name='bio')
       button.btn.btn-primary.btn-lg(type='submit') Update Bio
+
+    a(href='/logout')
+      button.btn.btn-danger.btn-lg.mt-3(type='button') Log Out
