--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -57,6 +57,10 @@ hr {
     padding: 0;
 }
 
+.fade {
+    background: rgba(0, 0, 0, 0.2);
+}
+
 /*========== Login/Register ==========*/
 
 .login-container {
