--- a/views/posts.pug
+++ b/views/posts.pug
@@ -24,7 +24,7 @@ block profileContent
         table.post-buttons
           tbody
             tr
-              td.i.far.fa-comment.comment-button(data-id=item.id)
+              td.i.far.fa-comment.comment-button(data-toggle='modal')
               if item.isLiked
                 td.i.fas.fa-heart.liked.like-button(data-id=item.id data-action='unlike')
               else
@@ -34,3 +34,19 @@ block profileContent
                 td #{item.originalTimestamp}
               else
                 td #{item.timestamp}
+
+    //- Comment modal
+    #commentModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='commentModalLabel', aria-hidden='true')
+      .modal-dialog(role='document')
+        .modal-content
+          .modal-header
+            h5#commentModalLabel.modal-title Comment
+            button.close(type='button', data-dismiss='modal', aria-label='Close')
+              span(aria-hidden='true') ×
+          .modal-body
+            form(action='/post/comment', method='post', id='comment-form')
+              .form-group
+                textarea.form-control(rows='5', name='postText')
+                button.btn.btn-primary.mr-1.mt-1(type='button')
+                  i.far.fa-image
+                button.btn.btn-primary.mt-1(type='submit') Post
