--- a/views/posts.pug
+++ b/views/posts.pug
@@ -24,11 +24,11 @@ block profileContent
         table.post-buttons
           tbody
             tr
-              td.i.far.fa-comment.comment-button(data-toggle='modal')
+              td.i.far.fa-comment.comment-button(data-id=item.id, data-toggle='modal')
               if item.isLiked
-                td.i.fas.fa-heart.liked.like-button(data-id=item.id data-action='unlike')
+                td.i.fas.fa-heart.liked.like-button(data-id=item.id, data-action='unlike')
               else
-                td.i.far.fa-heart.like-button(data-id=item.id data-action='like')
+                td.i.far.fa-heart.like-button(data-id=item.id, data-action='like')
               td.i.fas.fa-arrow-right.repost-button(data-id=item.id)
               if isRepost
                 td #{item.originalTimestamp}
