--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -100,11 +100,16 @@ hr {
     padding: 15px;
     margin-top: 0px;
     min-height: 110px;
+    cursor: pointer;
 }
 
 .post .avatar-sm {
     float: left;
     position: absolute;
+}
+
+.post img:hover {
+    filter: brightness(0.8);
 }
 
 .post .repost-text {
@@ -124,6 +129,7 @@ hr {
     margin-top: 4px;
     margin-bottom: 4px;
     font-size: 20px;
+    cursor: default;
 }
 
 .post-buttons td:first-child {
