--- a/views/thread.pug
+++ b/views/thread.pug
@@ -1,5 +1,40 @@
 extends layout
 
+mixin post(focus=false)
+
+  if focus
+    .thread-focus.container
+      .post.container
+        +postBody
+    .border-top.container
+  else
+    .post.container.border-bottom.border-left.border-right
+      +postBody
+
+mixin postBody
+
+  a(href=`/user/${post.username}`)
+    .avatar-sm
+      img(src=`/images/avatar/${post.avatar}.webp`, onerror='this.src="/images/avatar/default.webp"')
+  .h6
+    a(href=`/user/${post.username}`) #{post.username}
+  p #{post.text}
+
+  table.post-buttons
+    tbody
+      tr
+        td.i.far.fa-comment.comment-button(data-id=post.id, data-toggle='modal')
+        if post.isLiked
+          td.i.fas.fa-heart.liked.like-button(data-id=post.id, data-action='unlike')
+        else
+          td.i.far.fa-heart.like-button(data-id=post.id, data-action='like')
+        td.i.fas.fa-arrow-right.repost-button(data-id=post.id)
+        td #{post.timestamp}
+
 block content
 
-  p Hello
+  .thread
+    +post(false)
+    +post(true)
+    +post(false)
+    +post(false)
