Added styling for post images

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -130,6 +130,19 @@ hr {
     margin-bottom: 4px;
 }
 
+.post-image {
+    margin-left: 100px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.post-image img {
+    object-fit: cover;
+    max-height: 400px;
+    max-width: 95%;
+    border-radius: 8px;
+}
+
 .post-buttons {
     width: 100%;
     margin-top: 4px;
