--- a/views/user.pug
+++ b/views/user.pug
@@ -25,8 +25,9 @@ block content
         form(action='/post/new', method='post', id='post-form')
           .form-group
             textarea.form-control(rows='5', name='postText')
-            button.btn.btn-primary.mr-1.mt-1(type='button')
+            button#image-button.btn.btn-primary.mr-1.mt-1(type='button')
               i.far.fa-image
+            input#image-form.image-form.form-control-file(type='file', accept='image/x-png,image/gif,image/jpeg', name='header')
             button.btn.btn-primary.mt-1(type='submit') Post
 
     #profile-posts
