Added file uploading functionality

--- a/views/user.pug
+++ b/views/user.pug
@@ -40,7 +40,7 @@ block content
             textarea.form-control(rows='5', name='postText')
             button#image-button.btn.btn-primary.mr-1.mt-1(type='button')
               i.far.fa-image
-            input#image-form.image-form.form-control-file(type='file', accept='image/x-png,image/gif,image/jpeg', name='header')
+            input#image-form.image-form.form-control-file(type='file', accept='image/x-png,image/gif,image/jpeg', name='image')
             button.btn.btn-primary.mt-1(type='submit') Post
 
     //---------- Profile posts ----------//
