--- a/views/user.pug
+++ b/views/user.pug
@@ -35,7 +35,7 @@ block content
         .h4.float-left New Post
 
         //- Post form
-        form(action='/post/new', method='post', enctype='multipart/form-data')
+        form(action='/post/new', method='post',  id='post-form', enctype='multipart/form-data')
           .form-group
             textarea.form-control(rows='5', name='postText')
             button#image-button.btn.btn-primary.mr-1.mt-1(type='button')
