--- a/views/posts.pug
+++ b/views/posts.pug
@@ -2,13 +2,18 @@ extends user
 
 block profileContent
 
+  //---------- Profile posts ----------//
+
   #posts.card-body.border-left.border-right
+
     each item in profile.content
 
       - var isRepost = (item.reposter) ? true : false
       - var isReply = (item.originalPoster) ? true : false
 
       .post.container.border-bottom(data-id=item.id)
+
+        //- Shows repost/reply text
         if isRepost
           p.repost-text
             i.fas.fa-arrow-right
@@ -21,39 +26,56 @@ block profileContent
             |
             | #{item.username} Replied to #{item.originalPoster}
 
+        //- Username and avatar
         a(href=`/user/${item.username}`)
           .avatar-sm
             img(src=`/images/avatar/${item.avatar}.webp`, onerror='this.src="/images/avatar/default.webp"')
         .h6
           a(href=`/user/${item.username}`) #{item.username}
+
+        //- Post text
         p #{item.text}
 
+        //- Post image
         if item.image
           .post-image
             img(src=`/images/upload/${item.image}.webp`)
 
+        //- Post buttons
         table.post-buttons
+
           tbody
             tr
               td.i.far.fa-comment.comment-button(data-id=item.id, data-toggle='modal')
+
+              //- Like button is coloured when post is liked
               if item.isLiked
                 td.i.fas.fa-heart.liked.like-button(data-id=item.id, data-action='unlike')
               else
                 td.i.far.fa-heart.like-button(data-id=item.id, data-action='like')
+
               td.i.fas.fa-arrow-right.repost-button(data-id=item.id)
+
+              //- Shows original timestamp for reposts
               if isRepost
                 td #{item.originalTimestamp}
               else
                 td #{item.timestamp}
 
+    //---------- Modals ----------//
+
     //- Comment modal
     #commentModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='commentModalLabel', aria-hidden='true')
+
       .modal-dialog(role='document')
+
         .modal-content
+
           .modal-header
             h5#commentModalLabel.modal-title Comment
             button.close(type='button', data-dismiss='modal', aria-label='Close')
               span(aria-hidden='true') ×
+
           .modal-body
             form(action='/post/comment', method='post', id='comment-form')
               .form-group
